[package]
name = "mizumochi"
version = "0.1.0"
authors = ["mopp <yuta_kobiyama@dwango.co.jp>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
atomic_immut = "0.1"
bytecodec = {version = "0.4", features = ["json_codec"]}
clap = "2"
fibers = "0.1"
fibers_http_server = "0.1"
futures = "0.1"
fuse = "0.3"
httpcodec = "0.2"
libc = "0.2"
prometrics = "0.1"
serde = "1"
serde_derive = "1"
slog = "2"
slog-async = "2"
slog-term = "2"
time = "0.1"
